syntax = "proto3";

option java_package = "emu.lunarcore.proto";

message GroupStateInfo {
    uint32 EMFPPBJCLGP = 3;
    uint32 entry_id = 4;
    uint32 group_state = 2;
    uint32 group_id = 5;
}