syntax = "proto3";

option java_package = "emu.lunarcore.proto";

import "EntityMotion.proto";

message SceneEntityTeleportCsReq {
    uint32 entry_id = 2;
    EntityMotion entity_motion = 7;
}